--- a/ExamCenterFinder.Api/appsettings.Development.json
+++ b/ExamCenterFinder.Api/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     //"DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Exam_Centers;Integrated Security=True;"
-    "DefaultConnection": "Server=SqlServerDb; Database=ExamCenter; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
+    "DefaultConnection": "Server=localhost,8002; Database=ExamCenter; User Id=sa; Password=myStong_Password123#; Trust Server Certificate=True;"
   }
 }
